# Spatial-Video-Pipeline

./: README-3.md  README.md  capture.py  demo_synthetic.py  inference.py  pipeline.py  processor.py  profiler.py  pyproject.toml  renderer.py  tracker.py
benchmarks/: bench_pipeline.py
configs/: default.json
scripts/: run_pipeline.py
spatial_pipeline/: __init__.py  pipeline.py
spatial_pipeline/core/: capture.py  processor.py
spatial_pipeline/inference/: engine.py
spatial_pipeline/tracking/: tracker.py
spatial_pipeline/utils/: config.py  fps.py  profiler.py
spatial_pipeline/viz/: renderer.py
tests/: test_pipeline.py
