[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "spatial-pipeline"
version         = "1.0.0"
description     = "Edge-deployed real-time spatial video pipeline"
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "MIT" }

keywords = [
    "computer-vision", "object-detection", "real-time",
    "yolo", "onnx", "multithreaded", "edge-ai",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "onnxruntime>=1.17",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu>=1.17"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ultralytics>=8.0",   # for model export only
    "onnx>=1.15",
]

[project.scripts]
spatial-pipeline = "scripts.run_pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spatial_pipeline*"]

[tool.pytest.ini_options]
testpaths      = ["tests"]
addopts        = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source  = ["spatial_pipeline"]
omit    = ["tests/*", "benchmarks/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
skip_empty   = true
